attachment field added

--- a/ASSIGNMENT_2/index.html
+++ b/ASSIGNMENT_2/index.html
@@ -81,13 +81,15 @@
     <option value="high">high</option>
   </select><br>
 
+<p>Attachments:*</p>
+ <input type="file"  class="file1"/>
 
 
   </form>
 <hr>
 <div class="submission">
 
-<input type="submit" value="SEND" size="20px">
+<input type="submit"  value="SEND" size="50px">
 
 </div>
 
