--- a/ASSIGNMENT/index.html
+++ b/ASSIGNMENT/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/home/ttn/Desktop/ASSIGNMENT/resources/css/main.css">
+    <link rel="stylesheet" href="resources/css/main.css">
   </head>
   <body>
 
