--- a/javaScriptAssignment/question5.3.html
+++ b/javaScriptAssignment/question5.3.html
@@ -22,7 +22,7 @@ Dob:"11-02-1994"
 {
 
   name:"lohit ahuja",
-  age:23,
+  age:25,
   salary:3000,
   Dob:"13-02-1995"
 },
@@ -45,31 +45,54 @@ Dob:"11-02-1994"
 
 ];
 
-var ageGroup1=new Array();
 
-var ageGroup2=new Array();
 
-console.log(object1);
+function GroupByAge() {
+     var retrn = {};
+     for(let i = 0;i<object1.length;i++){
+       if(retrn[object1[i].age]){
+         retrn[object1[i].age].push(object1[i].name);
+         document.write(retrn[object1[i].age]+" <br>")
+       }else {
+         retrn[object1[i].age]=[object1[i].name];
+       }
+     }
+     return retrn;
+   }
+   var a = GroupByAge();
+   console.log(a);
 
- object1.forEach(function(x){
 
-if(x.age>=20 && x.age<=25){
-ageGroup1.push(x.name);
-console.log(x);
 
-}
-else if (x.age>25 && x.age<=35) {
-  ageGroup2.push(x.name);
-  console.log(x);
-}
 
- });
 
- console.log("age group 1 members:"+ageGroup1);
- console.log("age group 2 members:"+ageGroup2);
 
-const Results =groupBy(object1,obj => obj.age);
-console.log(Results.get(37));
+
+// var ageGroup1=new Array();
+
+// var ageGroup2=new Array();
+
+// console.log(object1);
+
+//  object1.forEach(function(x){
+
+// if(x.age>=20 && x.age<=25){
+// ageGroup1.push(x.name);
+// console.log(x);
+
+// }
+// else if (x.age>25 && x.age<=35) {
+//   ageGroup2.push(x.name);
+//   console.log(x);
+// }
+
+//  });
+
+//  console.log("age group 1 members:"+ageGroup1);
+//  console.log("age group 2 members:"+ageGroup2);
+
+// const Results =groupBy(object1,obj => obj.age);
+// console.log(Results.get(37));
 // document.getElementById("result").innerHTML=result;
 
 
