--- a/jquery/question7.html
+++ b/jquery/question7.html
@@ -25,7 +25,7 @@
 
           $("button").click(function(){
 var el = $("<button>ADD</button>");
-$(".myb").append(el);
+$(".myb").after(el);
 
 
           });
@@ -42,7 +42,7 @@ $(".myb").append(el);
 <body>
 
 
-    <button class="myB" onclick="click()">ADD</button>
+    <button class="myB">ADD</button>
     <p class="target">This is the a paragragh!!</p>
 
 
